# django-get-started-poc

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configuration/: settings.py  urls.py
core/: admin.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: detail.html  index.html  results.html
