[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
psycopg2 = "^2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"